(Issue #1222) - making whitespace appear in markdown sections

--- a/calm-hub-ui/src/helper-functions/marker.css
+++ b/calm-hub-ui/src/helper-functions/marker.css
@@ -15,11 +15,3 @@ ul {
     font-weight: bold;
     color: green;
 }
-
-/* .collapse {
-    visibility: visible;
-}
-
-.collapse-content {
-    visibility: hidden;
-} */
